/*
 * $Id: ChangeLog,v 1.314 2007-01-04 14:53:47 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-01-04 08:52 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_altsyntax.ch
    ! Added missing variable initialization.

2007-01-03 08:29 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_editbox.prg
    * Modified for not hilite all text when got focus.
  * include/i_window.ch
  * source/h_tab.prg
  * source/h_controlmisc.prg
    + Form.Tab.Image( n ) syntax added.

2007-01-02 10:57 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_print.prg
    * optimizing RTF, CSV and HTML view results.

2007-01-01 22:30 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/common_make.bat
  * source/h_button.prg
  * source/h_progressmeter.prg
  * source/h_slider.prg
  * source/h_windows.prg
  * source/makelib_mingw.bat
    ! Fixed MinGW compilation.

2007-01-01 21:21 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_print.prg
  * source/h_report.prg
    * added THTML Class print mode (excel based) "in future posible independent"

2007-01-01 16:30 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * ./compile.bat
  * source/makelib.bat
    * Default C compiler must be Borland C.
  * source/c_grid.c
    ! Fixed warning.
  * source/makelib_mingw.bat
    * Sets PATH environment variable to MinGW.

2007-01-01 14:46 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  + source/common_make.bat
  * source/makelib.bat
  + source/makelib_bcc.bat
  + source/makelib_mingw.bat
  + source/makelib_pc.bat
    + Added MAKELIB file for Pelles C and MinGW (experimental!).
    * Unified PRG sources compilation.
  * ./compile.bat
  + ./compile_bcc.bat
  + ./compile_pc.bat
    + Added COMPILE file for Pelles C.
  * source/h_grid.prg
    * Added missing declaration for Pelles C.
  * source/c_combo.c